jx_android_new/ch22/javacc/bin/mobile/android/jx/javacc/parser/MyParser.jj



PARSER_BEGIN(MyParser)

package mobile.android.jx.javacc.parser;
public class MyParser {



}

PARSER_END(MyParser)

SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
}

TOKEN :
{
  <LBRACE: "(">
| <RBRACE: ")">
}

/** Root production. */
int Input() :
{ int count; }
{
  count=MatchedBraces()
  { return  count; }
}

int MatchedBraces() :
{ int nested_count=0; }
{
  <LBRACE> [ nested_count=MatchedBraces() ] <RBRACE>
  { return ++nested_count; }
}
